BUG fixed text alignment and date

--- a/source/style/card.css
+++ b/source/style/card.css
@@ -111,6 +111,7 @@
   font-family: Inter, sans-serif;
   font-size: 18px;
   font-weight: 500;
+  text-align: left;
 }
 
 .input-field {
